업그레이드_1

--- a/TNYT.html
+++ b/TNYT.html
@@ -7,10 +7,8 @@
 </head>
 
 <body>
-<h1>&nbsp;&nbsp;&nbsp;
-    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;The New York Times</h1>
-    <a href="Index.html">Thinking Vincent</a>
+<h1>The New York Times</h1>
+    <a href="index.html">Thinking Vincent</a>
     <hr>
 Thursday, September 1, 2022&nbsp;&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -33,6 +31,17 @@ Thursday, September 1, 2022&nbsp;&nbsp;&nbsp;&nbsp;
     <li>Abundant fossil bones, teeth, trackways, and other hard evidence have revealed that Earth was the domain of the dinosaurs for at least 230 million years. But so far, not a single trace of dinosaur remains has been found in rocks younger than about 66 million years. At that point, as the Cretaceous period yielded to the Paleogene, it seems that all nonavian dinosaurs suddenly ceased to exist.</li>
     <img src = "a-dinosaur-trove-in-it.jpg" width="100%">
 </p>
-
+<p>
+    <div id="disqus_thread"></div>
+             <script>
+            (function() { // DON'T EDIT BELOW THIS LINE
+            var d = document, s = d.createElement('script');
+            s.src = 'https://web1-taekjw2ffn.disqus.com/embed.js';
+            s.setAttribute('data-timestamp', +new Date());
+            (d.head || d.body).appendChild(s);
+            })();
+            </script>
+            <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+</p>
 </body>
 </html>
