--- a/myworld.html
+++ b/myworld.html
@@ -1,25 +1,13 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
     <head>
-        <title>Thinking Vincent</title>
-        <H1><a href="index.html">Thinking Vincent</a></H1>
-        <hr>
-        Welcome to <strong><a href = "myworld.html">My World</a></strong>
+        <title>MyWorld</title>
+        <h1>My world</h1>
         <hr>
     </head>
-
     <body>
-        <p>
-        <img src = "Salvador Dalí.jpg" width="20%">
-        <br><strong>Lee Jae-Baek</strong>
-        </p>
-        <p>
-            <h3>My work</h3>
-            <ul>
-                <li><a href="TNYT.html">The New York Times</a></li>
-                <li><a href="NoSmokingCommercial.html">No Smoking Commercial</a></li>
-            </ul>
-        </p>
+        <h2>Sorry.<br>My world is still Empty.</h2>
+        Please return to <a href = "index.html">Main page</a>.
         <p>
             <div id="disqus_thread"></div>
              <script>
