--- a/NoSmokingCommercial.html
+++ b/NoSmokingCommercial.html
@@ -3,8 +3,14 @@
     <head>
         <title>No Smoking Commercial</title>
         <meta charset="utf-8">
+        <style>
+            a {
+                color:black;
+                text-decoration: none;
+            }
+        </style>
         <h1>Run</h1>
-        <a href="index.html">Thinking Vincent</a>
+        <a href="index.html" style="text-decoration: underline;">Thinking Vincent</a>
         <hr>
     </head>
     <body>
