--- a/index.html
+++ b/index.html
@@ -2,9 +2,15 @@
 <html>
     <head>
         <title>Thinking Vincent</title>
+        <style>
+            a {
+                color:black;
+                text-decoration: none;
+            }
+        </style>
         <H1><a href="index.html">Thinking Vincent</a></H1>
         <hr>
-        Welcome to <strong><a href = "myworld.html">My World</a></strong>
+        Welcome to <strong><a href = "myworld.html" style="text-decoration: underline;">My World</a></strong>
         <hr>
     </head>
 
