--- a/myworld.html
+++ b/myworld.html
@@ -2,12 +2,18 @@
 <html>
     <head>
         <title>MyWorld</title>
+        <style>
+            a {
+                color:black;
+                text-decoration: none;
+            }
+        </style>
         <h1>My world</h1>
         <hr>
     </head>
     <body>
         <h2>Sorry.<br>My world is still Empty.</h2>
-        Please return to <a href = "index.html">Main page</a>.
+        Please return to <a href = "index.html" style="text-decoration: underline;">Main page</a>.
         <p>
             <div id="disqus_thread"></div>
              <script>
