--- a/TNYT.html
+++ b/TNYT.html
@@ -3,12 +3,18 @@
 
 <head>
     <title>The New York Times</title>
+    <style>
+        a {
+            color:black;
+            text-decoration: none;
+        }
+    </style>
     <meta charset="utf-8">
 </head>
 
 <body>
 <h1>The New York Times</h1>
-    <a href="index.html">Thinking Vincent</a>
+    <a href="index.html"style="text-decoration: underline;">Thinking Vincent</a>
     <hr>
 Thursday, September 1, 2022&nbsp;&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
