--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
                 color:black;
                 text-decoration: none;
             }
+            h1 {
+                font-size: 45px;
+                text-align:center;
+            }
         </style>
         <H1><a href="index.html">Thinking Vincent</a></H1>
         <hr>
