--- a/myworld.html
+++ b/myworld.html
@@ -7,6 +7,10 @@
                 color:black;
                 text-decoration: none;
             }
+            h1 {
+                font-size: 45px;
+                text-align:center;
+            }
         </style>
         <h1>My world</h1>
         <hr>
