--- a/NoSmokingCommercial.html
+++ b/NoSmokingCommercial.html
@@ -8,6 +8,10 @@
                 color:black;
                 text-decoration: none;
             }
+            h1 {
+                font-size: 45px;
+                text-align:center;
+            }
         </style>
         <h1>Run</h1>
         <a href="index.html" style="text-decoration: underline;">Thinking Vincent</a>
