--- a/TNYT.html
+++ b/TNYT.html
@@ -8,21 +8,18 @@
             color:black;
             text-decoration: none;
         }
+        h1 {
+                font-size: 45px;
+                text-align:center;
+            }
     </style>
     <meta charset="utf-8">
+    <h1>The New York Times</h1>
 </head>
 
 <body>
-<h1>The New York Times</h1>
     <a href="index.html"style="text-decoration: underline;">Thinking Vincent</a>
-    <hr>
-Thursday, September 1, 2022&nbsp;&nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<strong>SUBSCRIBE FOR $0.50/WEEK</strong>
-<br><hr>
+    <hr>Thursday, September 1, 2022<hr>
 
 <p>
     <h2>Why did the dinosaurs go extinct?</h2>
