--- a/cafe.html
+++ b/cafe.html
@@ -1,7 +1,8 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
     <head>
-        <title>Thinking Vincent</title>
+        <title>portrait</title>
+        <meta charset = "utf-8">
         <style>
             a {
                 color:black;
@@ -28,25 +29,16 @@
         </style>
         <h1><a href = "index.html">Thinking Vincent</a></h1>
     </head>
-
     <body>
+        <!--
         <ul>
-            <li><a href = "portrait.html">Self-Portrait</a></li>
+            <li><a href = "portrait.html">Self-Portrait of 2019</a></li>
             <li><a href = "cafe.html">Café Terrace at Night</a></li>
             <li><a href = "starry.html">The Starry Night</a></li>
         </ul>
-        
-        <p>
-            <div id="disqus_thread"></div>
-             <script>
-            (function() { // DON'T EDIT BELOW THIS LINE
-            var d = document, s = d.createElement('script');
-            s.src = 'https://web1-taekjw2ffn.disqus.com/embed.js';
-            s.setAttribute('data-timestamp', +new Date());
-            (d.head || d.body).appendChild(s);
-            })();
-            </script>
-            <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-        </p>
+        -->
+        <div style = "text-align: center; padding-top: 30px;"><img src = "cafe.jpg" width="30%"></div>
+        <h2 style="text-align: center; margin-bottom: 0px;">Café Terrace at Night</h2>
+        <h3 style="text-align: center; margin-top: 0px;">(2019)</h3>
     </body>
 </html>
