--- a/flower.html
+++ b/flower.html
@@ -50,27 +50,32 @@
                 <strong>
                 <li><a href = "cafe.html">Café Terrace at Night</a></li> 
                 <li><a href = "portrait.html">Smiling Vincent</a></li>
-                <li><a href = "flower.html">Sunflowers</a></li>
+                <li style="color: red;"><a href = "flower.html">Sunflowers</a></li>
                 <li><a href = "starry.html">The Starry Night</a></li>
                 </strong>
             </ul>
             <div id = "main">
-                <img src = "main3.jpg" width="100%"><br>
-                <strong><div style="text-align: center;">Vincent Willem van Gogh<br>(1853 ~ 1890)</div></strong>
+                <img src = "flower.jpg" width="100%"><br>
+                <strong><div style="text-align: center;">Sunflowers<br>(1880)</div></strong>
             </div>
             <div id = "main">
-            <strong><div style="font-size: 30px; ">1882.7.21</div></strong><br>
-                인물화나 풍경화에서 내가 표현하고 싶은 것은 
-                감상적으로 우울한 것이 아니라 뿌리 깊은 고뇌다.<br>
-                내 그림을 본 사람들이 이 화가는 깊이 고뇌하고 있다고,
-                <br>정말 격렬하게 고뇌하고 있다고 말할 정도의 경지에 이르고 싶다.
-            <br><br><strong><div style="font-size: 30px; ">1882.7.xx</strong></div><br>
-            화가의 의무는 자연에 몰두하고 온 힘을 다해서 자신의 감정을 작품 속에 쏟아부슨 것이다.
-            <br>그래야 다른 사람도 이해할 수 있는 그림이 된다.
-            <br>만일 팔기 위해 그림을 그린다면 그런 목적에 도달할 수 없다.
-            <br>그건 예술을 사랑하는 사람들의 눈을 속이는 행위을 뿐이다.
-            <br>진정한 예술가는 결코 그런 짓을 하지 않는다.
-            <br>진지하게 작업을 해 나가면 언젠가는 사람들의 공감을 얻게 된다.
+            <strong><div style="font-size: 30px; ">1888.8.xx</div></strong><br>
+                <strong>테오에게.</strong><br><br>
+                마르세유 사람이 부이야베스 생선수프를 먹는 것처럼 열심히 그림을 그리고 있다.
+                <br>커다란 해바라기를 그리고 있다는 것에 너도 놀라지 않겠지.
+                <br><br>캔버스 세 개를 동시에 작업 중이다.
+                <br>첫 번째는 초록색 화병에 꽂힌 커다란 해바라기 세 송이를 그린 것인데, 배경은 밝고 크기는 15호 캔버스다.
+                <br>두 번째도 역시 세 송이인데, 그중 하나는 꽃잎이 떨어지고 씨만 남았다.
+                <br>이건 파란색 바탕이며 크기는 25호 캔버스다.
+                <br>세 번째는 노란색 화병에 꽂힌 열두 송이의 해바라기며, 30호 캔버스다.
+                <br>이것은 환한 바탕으로, 가장 멋진 그림이 될 거라고 기대하고 있다.
+                <br><br>어쩌면 여기서 끝내지 않을지도 모른다.
+                <br>고갱과 함께 우리들의 작업실에서 살게 된다고 생각하니 작업실을 장식하고 싶어졌거든.
+                <br>오직 커다란 해바라기로만 말이다.
+                <br>네 가게 앞에 있는 레스토랑이 아주 아름다운 꽃으로 장식되어 있다는 걸 너도 알겠지.
+                <br>나는 그곳 창문에 있던 커다란 해바라기를 늘 기억하고 있다.
+                <br><br>이 계획을 실천에 옮기려면 열두 점 정도의 그림을 그려야 한다.
+                <br>그 그림을 모두 모아놓으면 파란색과 노란색의 심포니를 이루겠지.
             </div>
         </div>
         <p>
