--- a/portrait.html
+++ b/portrait.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
     <head>
-        <title>portrait</title>
-        <meta charset = "utf-8">
+        <title>Thinking Vincent</title>
         <style>
+            body { margin: 0;}
             a {
                 color:black;
                 text-decoration: none;
@@ -19,26 +19,63 @@
             ul {
                 border-right: 1px solid black;
                 width: 150px;
-                padding: 20px;
+                padding: 30px;
+                padding-right: 20px;
+                padding-left: 20px;
+                padding-top: 23px;
                 margin: 0;
             }
             li {
-                font-size:16px;
-                padding: 3px;
+                font-size:15px;
+                padding: 4px;
+            }
+            #grid {
+                display:grid;
+                grid-template-columns: 190px 1fr 3fr;
+            }
+            #main {
+                padding : 30px;
+                padding-right: 0px;
+            }
+            #grid div {
+                line-height: 25px;
             }
         </style>
         <h1><a href = "index.html">Thinking Vincent</a></h1>
     </head>
+
     <body>
-        <!--
-        <ul>
-            <li><a href = "portrait.html">Self-Portrait of 2019</a></li>
-            <li><a href = "cafe.html">Café Terrace at Night</a></li>
-            <li><a href = "starry.html">The Starry Night</a></li>
-        </ul>
-        -->
-        <div style = "text-align: center; padding-top: 30px;"><img src = "gogh.jpg" width="30%"></div>
-        <h2 style="text-align: center; margin-bottom: 0px;">Self-Portrait</h2>
-        <h3 style="text-align: center; margin-top: 0px;">(ver. 2022)</h3>
+        <div id = "grid">
+            <ul>
+                <strong>
+                    <li><a href = "cafe.html">Café Terrace at Night</a></li> 
+                    <li style="color: red;"><a href = "portrait.html">Smiling Vincent</a></li>
+                    <li><a href = "flower.html">Sunflowers</a></li>
+                    <li><a href = "starry.html">The Starry Night</a></li>
+                </strong>
+            </ul>
+            <div id = "main">
+                <img src = "gogh.jpg" width="100%"><br>
+                <strong><div style="text-align: center;">Smiling Vincent<br>(Ver. 2022)</div></strong>
+            </div>
+            <div id = "main">
+            <strong><div style="font-size: 30px; ">2022.9.4</div></strong><br>
+                <strong>빈센트에게.</strong><br><br>
+                
+
+            </div>
+        </div>
+        <p>
+            <div id="disqus_thread"></div>
+             <script>
+            (function() { // DON'T EDIT BELOW THIS LINE
+            var d = document, s = d.createElement('script');
+            s.src = 'https://web1-taekjw2ffn.disqus.com/embed.js';
+            s.setAttribute('data-timestamp', +new Date());
+            (d.head || d.body).appendChild(s);
+            })();
+            </script>
+            <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+        </p>
     </body>
 </html>
