반 고흐 뮤지엄

--- a/cafe.html
+++ b/cafe.html
@@ -68,6 +68,7 @@
                 <br><br>나는 검은색을 전혀 사용하지 않고 아름다운 파란색과 보라색, 초록색만을 사용했어.
                 <br>그리고 밤을 배경으로 빛나는 광장은 노란색으로 그렸단다.
                 <br>특히 이 밤하늘에 별을 찍어 넣는 순간은 정말 행복했단다.
+            </div>
         </div>
         <p>
             <div id="disqus_thread"></div>
