--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 내 그림을 본 사람들이 이 화가는 깊이 고뇌하고 있다고,
                 <br>정말 격렬하게 고뇌하고 있다고 말할 정도의 경지에 이르고 싶다.
             <br><br><strong><div style="font-size: 30px; ">1882.7.xx</strong></div><br>
-            화가의 의무는 자연에 몰두하고 온 힘을 다해서 자신의 감정을 작품 속에 쏟아부슨 것이다.
+            화가의 의무는 자연에 몰두하고 온 힘을 다해서 자신의 감정을 작품 속에 쏟아붓는 것이다.
             <br>그래야 다른 사람도 이해할 수 있는 그림이 된다.
             <br>만일 팔기 위해 그림을 그린다면 그런 목적에 도달할 수 없다.
             <br>그건 예술을 사랑하는 사람들의 눈을 속이는 행위을 뿐이다.
