--- a/cafe.html
+++ b/cafe.html
@@ -2,45 +2,7 @@
 <html>
     <head>
         <title>Thinking Vincent</title>
-        <style>
-            body { margin: 0;}
-            a {
-                color:black;
-                text-decoration: none;
-            }
-            h1 {
-                font-size: 45px;
-                text-align:center;
-                border-bottom:1px solid;
-                border-color: black;
-                margin: 0;
-                padding: 25px;
-            }
-            ul {
-                border-right: 1px solid black;
-                width: 150px;
-                padding: 30px;
-                padding-right: 20px;
-                padding-left: 20px;
-                padding-top: 23px;
-                margin: 0;
-            }
-            li {
-                font-size:15px;
-                padding: 4px;
-            }
-            #grid {
-                display:grid;
-                grid-template-columns: 190px 1fr 3fr;
-            }
-            #main {
-                padding : 30px;
-                padding-right: 0px;
-            }
-            #grid div {
-                line-height: 25px;
-            }
-        </style>
+        <link rel = "stylesheet" href="style.css">
         <h1><a href = "index.html">Thinking Vincent</a></h1>
     </head>
 
