--- a/index.html
+++ b/index.html
@@ -3,10 +3,16 @@
     <head>
         <title>Thinking Vincent</title>
         <link rel = "stylesheet" href="style.css">
-        <h1><a href = "index.html">Thinking Vincent</a></h1>
     </head>
 
     <body>
+        <h1><a href = "index.html">Thinking Vincent</a><br>
+            <input type="button" value="Day" onclick="
+            document.querySelector('body').style.backgroundColor = 'white';
+            document.querySelector('body').style.color = 'black'; ">
+            <input type="button" value="Night" onclick="
+            document.querySelector('body').style.backgroundColor = '#0c2461';
+            document.querySelector('body').style.color = '#fed330'; "></h1>
         <div id = "grid">
             <ul>
                 <strong>
