--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
             document.querySelector('body').style.backgroundColor = 'white';
             document.querySelector('body').style.color = 'black'; ">
             <input type="button" value="Night" onclick="
-            document.querySelector('body').style.backgroundColor = '#0c2461';
-            document.querySelector('body').style.color = '#fed330'; "></h1>
+            document.querySelector('body').style.backgroundColor = '#1A1B28';
+            document.querySelector('body').style.color = '#D7D7D7'; "></h1><!--#fed330-->
         <div id = "grid">
             <ul>
                 <strong>
