--- a/cafe.html
+++ b/cafe.html
@@ -3,7 +3,13 @@
     <head>
         <title>Thinking Vincent</title>
         <link rel = "stylesheet" href="style.css">
-        <h1><a href = "index.html">Thinking Vincent</a></h1>
+            <h1><a href = "index.html">Thinking Vincent</a><br>
+            <input type="button" value="Day" onclick="
+            document.querySelector('body').style.backgroundColor = 'white';
+            document.querySelector('body').style.color = 'black'; ">
+            <input type="button" value="Night" onclick="
+            document.querySelector('body').style.backgroundColor = '#1A1B28';
+            document.querySelector('body').style.color = '#D7D7D7'; "></h1>
     </head>
 
     <body>
